fix: hidden fadeout overflow now on certain elements only
The component wide overflow: hidden messed with the auto complete overlay, this is now fixed.

--- a/src/app/generator/generator.component.scss
+++ b/src/app/generator/generator.component.scss
@@ -2,9 +2,6 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 10rem;
-
-    // Overflow for primeflex fadeoutright animation
-    overflow-x: hidden;
 }
 
 ::ng-deep .vw-panel {
